@@ -67,13 +67,21 @@ class TransLogger(object):
             req_uri += '?'+environ['QUERY_STRING']
         if bytes is None:
             bytes = '-'
+        if time.daylight:
+                offset = time.altzone / 60 / 60 * -100
+        else:
+                offset = time.timezone / 60 / 60 * -100
+        if offset >= 0:
+                offset = "+%0.4d" % (offset)
+        elif offset < 0:
+                offset = "%0.4d" % (offset)
         d = {
             'REMOTE_ADDR': environ.get('REMOTE_ADDR') or '-',
             'REMOTE_USER': environ.get('REMOTE_USER') or '-',
             'REQUEST_METHOD': environ['REQUEST_METHOD'],
             'REQUEST_URI': req_uri,
             'HTTP_VERSION': 'HTTP/1.0', # @@ Fix
-            'time': time.strftime('%a %b %d %H:%M:%S %Y', start),
+            'time': time.strftime('%d/%b/%Y:%H:%M:%S ', start) + offset,
             'status': status.split(None, 1)[0],
             'bytes': bytes,
             'HTTP_REFERER': environ.get('HTTP_REFERER', '-'),
